# pneumonia-xray-ai

./: .gitignore  CLASS_IMBALANCE_STRATEGY.md  PROJECT_OVERVIEW.md  README.md  ROADMAP.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  task.yml
app/: README.md
artifacts/: README.md
configs/: README.md  config.yaml
configs/evaluation/: base.yaml  defaut.yaml
configs/model/: base.yaml  default.yaml
configs/training/: base.yaml  default.yaml
data/: README.md
docs/: 06_model_selection_plan.md  DATASET.md  DEPLOYMENT_PLAN.md  EVALUATION_PROTOCOL.md  EXPLAINABILITY.md  IMAGE_DIMENSION_STATISTICS.md  ISSUE_BACKLOG.md  METRICS.md  MODEL_SELECTION_CRITERIA.md  PRETRAINED_WEIGHTS.md  RISKS_AND_LIMITATIONS.md  VISUALIZATION_PLAN.md  final_layer_modification_strategy.md
docs/issues/: 01_repo_scaffold_review.md  02_dataset_ingestion_plan.md  03_eda_notebook_plan.md  04_baseline_model_selection.md  05_config_design.md  06_evaluation_protocol_definition.md  07_visualization_outputs_plan.md  08_gradcam_integration_plan.md  09_colab_training_plan.md  10_demo_deployment_plan.md  11_reproducibility_checklist.md  12_documentation_pass.md  13_final_release_checklist.md
notebooks/: 01_eda_chest_xray.ipynb  README.md  colab_setup_placeholder.ipynb  eda_class_distribution.ipynb
src/: README.md
src/evaluation/: evaluate.py  metrics.py
tests/: README.md
